implement add_task_board / css / js

--- a/html/board.html
+++ b/html/board.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/board.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/add_task.css">
+    <link rel="stylesheet" href="../assets/templates/css/add_task_board_mediaquerries.css">
     <script src="../js/board.js"></script>
     <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
