fix subtasks push to board

--- a/html/board.html
+++ b/html/board.html
@@ -116,6 +116,8 @@
     <section id="idDetailCard" class="containerDetailCard">
     </section>
 
+    <!-----------------add_task_board------------------>
+
     <div class="container-board d-none" id="container-add-task-board">
         <div class="head">
             <h1 class="h1-board">Add Task</h1>
@@ -182,7 +184,7 @@
                         <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
                             id="add-button-subtask" onclick="addSubTask()">+</button>
                     </div>
-                    <div id="show-subtask"></div>
+                    <div id="show-subtask" class="show-subtask-board"></div>
                     <span id="error-message-subtasks" class="error-message">please fill in</span>
                 </div>
             </div>
