--- a/html/board.html
+++ b/html/board.html
@@ -25,7 +25,7 @@
     <section class="headerFrame">
         <div class="titleSearch">
             <div class="titleBoard">Board</div>
-            <div id="addTaskMobil" class="findAddTask d-none">
+            <div id="addTaskMobil" class="findAddTask">
                 <button class="addTask">
                     <div class="widthAdd"><img class="imgAdd" src="../assets/img/add.png" alt=""></div>
                 </button>
@@ -49,7 +49,7 @@
                 </button>
             </div>
         </div>
-        <div id="searchMobil" class="search-container d-none">
+        <div id="searchMobil" class="search-container">
             <form class="formSearch">
                 <input id="searchTaskMobil" class="inputSearch" type="text" placeholder="Find Task" name="search"
                     oninput="searchTasks()">
@@ -86,21 +86,21 @@
         </div>
     </section>
     <section class="contentFrame">
-        <div class="boardColumn d-none mobilBoardTaskTitles">
+        <div class="boardColumn mobilBoardTaskTitles">
             <div class="titleBoardColumn">To do</div>
             <button class="addBoardColumn">
                 <div class="plus">+</div>
             </button>
         </div>
         <div id="toDO" ondrop="drop(0)" ondragover="allowDrop(event)" class="columnBoard scrollbarColumn"></div>
-        <div class="boardColumn d-none mobilBoardTaskTitles">
+        <div class="boardColumn mobilBoardTaskTitles">
             <div class="titleBoardColumn">In progress</div>
             <button class="addBoardColumn">
                 <div class="plus">+</div>
             </button>
         </div>
         <div id="inProgress" ondrop="drop(1)" ondragover="allowDrop(event)" class="columnBoard scrollbarColumn"></div>
-        <div class="boardColumn d-none mobilBoardTaskTitles">
+        <div class="boardColumn mobilBoardTaskTitles">
             <div class="titleBoardColumn">Await feedback</div>
             <button class="addBoardColumn">
                 <div class="plus">+</div>
@@ -108,7 +108,7 @@
         </div>
         <div id="awaitFeedback" ondrop="drop(2)" ondragover="allowDrop(event)" class="columnBoard scrollbarColumn">
         </div>
-        <div class="boardColumn d-none mobilBoardTaskTitles">
+        <div class="boardColumn mobilBoardTaskTitles">
             <div class="titleBoardColumn">Done</div>
         </div>
         <div id="done" ondrop="drop(3)" ondragover="allowDrop(event)" class="columnBoard scrollbarColumn"></div>
