--- a/html/add_task.html
+++ b/html/add_task.html
@@ -85,7 +85,10 @@
             </div>
         </section>
         <div class="footer">
-            <span>*This field is required</span>
+            <div>
+                <span class="span-star">*</span>
+                <span>This field is required</span>
+            </div>
             <div class="button-footer">
                 <button class="btn-footer-clear btn" onclick="clearInputs()" id="btn-clear">Clear x</button>
                 <button class="btn-footer-create btn" onclick="addTask()">Create Task 
