--- a/html/board.html
+++ b/html/board.html
@@ -17,6 +17,7 @@
     <script src="../assets/templates/js/board_templates.js"></script>
     <script src="../js/add_task_board.js"></script>
     <script src="../assets/templates/js/add_task_template.js"></script>
+    <script src="../js/add_task.js"></script>
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 </head>
 
